[gd_scene load_steps=43 format=3 uid="uid://dbc0uhwssk1ju"]

[ext_resource type="Texture2D" uid="uid://1ymob2i2hp41" path="res://Skeleton/Take Hit.png" id="1_6kuho"]
[ext_resource type="Script" uid="uid://r0e1ls8to66b" path="res://Mobs/skeleton.gd" id="1_wwbpb"]
[ext_resource type="Texture2D" uid="uid://drmmmlptai2kw" path="res://Skeleton/Attack.png" id="2_k1f85"]
[ext_resource type="Texture2D" uid="uid://buxk34shuke04" path="res://Skeleton/Death.png" id="2_wwbpb"]
[ext_resource type="Texture2D" uid="uid://cpix5iqj0rfqm" path="res://Skeleton/Walk.png" id="3_7hjwy"]
[ext_resource type="Texture2D" uid="uid://cdwpd1nryqpph" path="res://Skeleton/Idle.png" id="4_7hjwy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cjg8j"]
atlas = ExtResource("2_k1f85")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gikci"]
atlas = ExtResource("2_k1f85")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3usgg"]
atlas = ExtResource("2_k1f85")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_23d64"]
atlas = ExtResource("2_k1f85")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym868"]
atlas = ExtResource("2_k1f85")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw3cg"]
atlas = ExtResource("2_k1f85")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyexo"]
atlas = ExtResource("2_k1f85")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwne6"]
atlas = ExtResource("2_k1f85")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ud"]
atlas = ExtResource("2_wwbpb")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3dga"]
atlas = ExtResource("2_wwbpb")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsi8e"]
atlas = ExtResource("2_wwbpb")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_htqgt"]
atlas = ExtResource("2_wwbpb")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx466"]
atlas = ExtResource("4_7hjwy")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nr3"]
atlas = ExtResource("4_7hjwy")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_oag0n"]
atlas = ExtResource("4_7hjwy")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ihtp"]
atlas = ExtResource("4_7hjwy")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gri6"]
atlas = ExtResource("3_7hjwy")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nj54"]
atlas = ExtResource("3_7hjwy")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqdpr"]
atlas = ExtResource("3_7hjwy")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe7ya"]
atlas = ExtResource("3_7hjwy")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cmde"]
atlas = ExtResource("1_6kuho")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxgoq"]
atlas = ExtResource("1_6kuho")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjtkm"]
atlas = ExtResource("1_6kuho")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwcb5"]
atlas = ExtResource("1_6kuho")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_kx466"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjg8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gikci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3usgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23d64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym868")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw3cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyexo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwne6")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3dga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsi8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htqgt")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx466")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oag0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ihtp")
}],
"loop": true,
"name": &"Idel",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gri6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nj54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqdpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe7ya")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cmde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxgoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjtkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwcb5")
}],
"loop": false,
"name": &"Take Hit",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m6nr3"]
radius = 7.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wwbpb"]
radius = 112.01785

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7hjwy"]
size = Vector2(10, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1f85"]
size = Vector2(18, 4)

[sub_resource type="Animation" id="Animation_met4f"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}

[sub_resource type="Animation" id="Animation_mxxm6"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_kisbe"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idel"]
}

[sub_resource type="Animation" id="Animation_t80fy"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="Animation" id="Animation_3o3t3"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Take Hit"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgk6n"]
_data = {
&"Attack": SubResource("Animation_met4f"),
&"Death": SubResource("Animation_mxxm6"),
&"Idel": SubResource("Animation_kisbe"),
&"Run": SubResource("Animation_t80fy"),
&"Take Hit": SubResource("Animation_3o3t3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjg8j"]
size = Vector2(28, 26)

[node name="skeleton" type="CharacterBody2D"]
collision_layer = 5
script = ExtResource("1_wwbpb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -1)
scale = Vector2(0.59999996, 0.5999999)
sprite_frames = SubResource("SpriteFrames_kx466")
animation = &"Attack"
autoplay = "Idel"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_m6nr3")

[node name="Detector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_wwbpb")

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_7hjwy")

[node name="Death2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death2"]
position = Vector2(-1, 1.1920928e-07)
rotation = 3.1415925
shape = SubResource("RectangleShape2D_k1f85")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lgk6n")
}

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(8, -3)
shape = SubResource("RectangleShape2D_cjg8j")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="Death2" to="." method="_on_death_2_body_entered"]
[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_exited"]
